@@ -1,4 +1,12 @@
 # Attack-on-Titan
 
+If you guys wish to run the program, pls add these two lines:
+
+--module-path path-to-javafx-lib-folder
+
+--add-modules javafx.controls,javafx.fxml,javafx.swing
+
+to VM option before running the program. There are some problems that I cannot solve for now.
+
 Latest update :
 Simple main menu that stores player's name and accessible to the map
